16/16.txt
1. Yifan Wang 488500

2.

  t.cpp:29:18: error: ambiguous template specialization 'fun<>' for 'void fun(std::ostream&, const string&)'
   template <> void fun (std::ostream& os, const std::string& s){
                    ^~~
   Here the reason causing the compiled error is that there are multiple candidates for the string instantiation template.
   The compiler is not able to figure out which to use.

3.

 
    template<typename T, typename... Args>
    void fun(std::ostream& os, const T& t, const Args&... rest){
        os<<t<<" ";
        fun(os,rest...);
    }

    my_class m("Class");
    std::string s("string");
    const char* c="char *";
    int i=1;
    float f=1.2;
    fun(cout,m,s,c,i,f);

4.

    5
    Class string char * 1 1.2 

5.
    5
    Class string char * 1 1.2 Argument pack size is 80

    string object would allocate more memory than it actually needs.
    The my_class object and string object are both 32 bytes.